// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ManageServersRow /> renders auto-connect icon only if server is autoConnect 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="responsive-table__row"
      >
        <td
          class="responsive-table__cell"
          data-th="Auto-connect"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-check text-primary"
            data-icon="check"
            data-prefix="fas"
            focusable="false"
            id="autoConnectIcon"
            role="img"
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M438.6 105.4C451.1 117.9 451.1 138.1 438.6 150.6L182.6 406.6C170.1 419.1 149.9 419.1 137.4 406.6L9.372 278.6C-3.124 266.1-3.124 245.9 9.372 233.4C21.87 220.9 42.13 220.9 54.63 233.4L159.1 338.7L393.4 105.4C405.9 92.88 426.1 92.88 438.6 105.4H438.6z"
              fill="currentColor"
            />
          </svg>
        </td>
        <th
          class="responsive-table__cell"
          data-th="Name"
        >
          <a
            href="/server/abc"
          >
            My server
          </a>
        </th>
        <td
          class="responsive-table__cell"
          data-th="Base URL"
        >
          https://example.com
        </td>
        <td
          class="responsive-table__cell text-end"
        >
          <span>
            ManageServersRowDropdown
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<ManageServersRow /> renders auto-connect icon only if server is autoConnect 2`] = `
<div>
  <table>
    <tbody>
      <tr
        class="responsive-table__row"
      >
        <td
          class="responsive-table__cell"
          data-th="Auto-connect"
        />
        <th
          class="responsive-table__cell"
          data-th="Name"
        >
          <a
            href="/server/abc"
          >
            My server
          </a>
        </th>
        <td
          class="responsive-table__cell"
          data-th="Base URL"
        >
          https://example.com
        </td>
        <td
          class="responsive-table__cell text-end"
        >
          <span>
            ManageServersRowDropdown
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
